# data-pull-tools

./: .gitattributes  .gitignore  .pre-commit-config.yaml  ArchiveCollector.py  Collect.py  CollectorMap.py  PromptSpinner.py  age_detail_utils.py  cached_excel_reader.py  file_utils.py  git_utils.py  infer_index.py  partial_collector.py  program_utils.py  pyproject.toml  referral_utils.py  requirements.txt  setup.ps1  setup.py  tox.ini
Bootstrap/: .gitignore  main.py  requirements.txt  setup.py
Collect/: Collect.py  CollectorMap.py
InferIndex/: InferIndex.py
Optional Tools/: CachedExcelReader.py  Utils.py
PandasTools/: CachedExcelReader.py  InferIndex.py  Stack.py  _ExampleDataSets.py
Stack/: Stack.py
Tools/: CachedExcelReader.py  InferIndex.py  Utils.py
Unpivot/: Unpivot.py
_scripts/: deploy.py
data_pull_tools/: _example_data.py  action_log_utils.py  age_details_utils.py  cached_excel_reader.py  console_logger.py  excel_utils.py  file_utils.py  infer_index.py  map_utils.py  mapping_utils.py  partial_collector.py  program_utils.py  prompt_utils.py  referral_utils.py  region_utils.py  time_utils.py  toml_utils.py  url_utils.py
data_pull_tools/caching/: __init__.py  cache_behavior.py  cache_manager.py  cache_strategy.py  cacher.py  excel_collector.py  excel_reader.py  resolve_strategy.py
data_pull_tools/console_utils/: TimedMessage.py  TimedMessageList.py  TimedMessageUtils.py
tests/: version_test.py
